# optimal-one

./: .env.example  README.md
all_projects/my_project/project_one/: ci_boss.md  pyproject.toml  requirements.txt
all_projects/my_project/project_one/my_agent/: github_client.py  graph.py  linear_client.py  main.py
all_projects/my_project/project_one/my_agent/utils/: build_graph.py
all_projects/my_project/project_one/project_one.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
all_projects/my_project/project_one/tests/: __init__.py  test_ci_boss.py
all_projects/project_two/: pyproject.toml
all_projects/project_two/my_other_agent/: main.py
all_projects/project_two/my_other_agent/utils/: build_graph.py
