[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-one"
version = "0.1.0"
description = "An excellent agent build for LangGraph cloud."
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.17",
    "langchain-community>=0.2.11",
    "requests>=2.31.0",
]

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_agent*"]